--- a/package.json
+++ b/package.json
@@ -29,5 +29,14 @@
     "globals": "^16.3.0",
     "prettier": "^3.6.2",
     "vite": "^7.0.3"
+  },
+  "lint-staged": {
+    "*.{js,jsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{scss,css,json,md}": [
+      "prettier --write"
+    ]
   }
 }
